--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,7 +4,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:fitsSystemWindows="true"
-        android:background="@color/primaryDarkColor">
+        android:background="@color/cool"
+        android:id="@+id/signinmainlayout">
         <LinearLayout android:layout_height="match_parent"
             android:id="@+id/loginScreen"
             android:layout_width="match_parent"
@@ -13,30 +14,28 @@
             android:paddingRight="18dp"
             android:layout_marginTop="20dp"
             android:onClick="hideKeyboardOnTouch">
-            <de.hdodenhof.circleimageview.CircleImageView
+            <ImageView
                 android:id="@+id/logo"
                 android:layout_width="110dp"
                 android:layout_height="110dp"
                 android:src="@drawable/v"
-                app:civ_border_color="@android:color/white"
-                app:civ_border_width="2dp"
                 android:layout_gravity="center_horizontal"
-                app:civ_circle_background_color="@color/primaryColor"
                 android:scaleType="centerCrop"/>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
-                app:boxBackgroundColor="@color/primaryDarkColor"
-                app:hintTextColor="@android:color/white">
+                app:boxBackgroundColor="@color/cool"
+                app:hintTextColor="@android:color/white"
+                android:hint="Email">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/loginUsername"
                     android:layout_width="match_parent"
-                    android:hint="Username"
                     android:layout_height="wrap_content"
                     android:inputType="text"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
             </com.google.android.material.textfield.TextInputLayout>
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
@@ -44,15 +43,16 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="8dp"
                 app:endIconMode="password_toggle"
-                app:boxBackgroundColor="@color/primaryDarkColor"
-                app:hintTextColor="@android:color/white">
+                app:boxBackgroundColor="@color/cool"
+                app:hintTextColor="@android:color/white"
+                android:hint="Password">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/loginPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Password"
                     android:inputType="textPassword"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
             </com.google.android.material.textfield.TextInputLayout>
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/loginButton"
